--- a/Endmer/Views/Departmanlar/DepartmanGuncelle.cshtml
+++ b/Endmer/Views/Departmanlar/DepartmanGuncelle.cshtml
@@ -26,6 +26,7 @@
                                     <div class="col-12">
                                         <label class="form-label">Departman Adı</label>
                                         @Html.TextBoxFor(x => x.DEPARTMAN, new { @class = "form-control", @placeholder = "Departman Adı..", @required = "required" })
+                                        @Html.ValidationMessageFor(x => x.DEPARTMAN, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                 </div>
