--- a/Endmer/Views/Kategoriler/KategoriGuncelle.cshtml
+++ b/Endmer/Views/Kategoriler/KategoriGuncelle.cshtml
@@ -26,6 +26,7 @@
                                     <div class="col-12">
                                         <label class="form-label">Kategori Adı</label>
                                         @Html.TextBoxFor(x => x.KATEGORIADI, new { @class = "form-control", @placeholder = "Kategori Adı..", @required = "required" })
+                                        @Html.ValidationMessageFor(x => x.KATEGORIADI, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                 </div>
