--- a/Endmer/Views/Zimmetler/ZimmetVer.cshtml
+++ b/Endmer/Views/Zimmetler/ZimmetVer.cshtml
@@ -41,6 +41,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Adet</label>
                                         <input type="text" class="form-control" name="ADET" placeholder="Adet.." required />
+                                        @Html.ValidationMessageFor(x => x.ADET, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-6 col-lg-6">
