--- a/Endmer/Views/Zimmetlerim/Aktar.cshtml
+++ b/Endmer/Views/Zimmetlerim/Aktar.cshtml
@@ -29,6 +29,7 @@
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Adet</label>
                                         <input type="text" class="form-control" name="ADET" placeholder="Adet.." required />
+                                        @Html.ValidationMessageFor(x => x.ADET, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
