Personel güncelleme işleminde kullanıcı adında ikinci @ işareti kaydı engellendi.

--- a/Endmer/Views/Konumlar/KonumEkle.cshtml
+++ b/Endmer/Views/Konumlar/KonumEkle.cshtml
@@ -24,7 +24,7 @@
                                     <div class="col-12">
                                         <label class="form-label">Konum</label>
                                         <input type="text" class="form-control" name="KONUM" placeholder="Konum.." required />
-                                        @Html.ValidationMessageFor(x => x.KATEGORIADI, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
+                                        @Html.ValidationMessageFor(x => x.KONUM, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
                                 </div>
 
