--- a/Endmer/Views/Personel/Index.cshtml
+++ b/Endmer/Views/Personel/Index.cshtml
@@ -54,11 +54,11 @@
                             {
                                 <tbody align="center">
                                     @{
-                                        if (x.YETKI == "A")
+                                        if (x.Tbl_Yetkiler.YETKIHARF == "A")
                                         {
                                             role = "Admin";
                                         }
-                                        if (x.YETKI == "P")
+                                        if (x.Tbl_Yetkiler.YETKIHARF == "P")
                                         {
                                             role = "Personel";
                                         }
