--- a/Endmer/Views/Personel/PersonelGuncelle.cshtml
+++ b/Endmer/Views/Personel/PersonelGuncelle.cshtml
@@ -53,11 +53,18 @@
 
                                 <div class="row mb-3">
 
+                                    @{
+                                        if(Model.KULLANICIADI.Contains("@"))
+                                        {
+                                            Model.KULLANICIADI = Model.KULLANICIADI.Replace("@", "");
+                                        }
+                                    }
+
                                     <div class="col-sm-12 col-md-4 col-lg-4 ">
                                         <label class="form-label">Kullanıcı Adı</label>
                                         <div class="input-group">
                                             <span class="input-group-text">&commat;</span>
-                                            <input type="text" name="KULLANICIADI" class="form-control" placeholder="Kullanıcı adı..">
+                                            @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control", @placeholder = "Kullanıcı adı..", @required = "required" })
                                         </div>
                                         @Html.ValidationMessageFor(x => x.KULLANICIADI, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
@@ -70,10 +77,7 @@
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Yetki</label>
-                                        <select class="form-select" name="YETKI">
-                                            <option value="A">Admin</option>
-                                            <option value="P">Personel</option>
-                                        </select>
+                                        @Html.DropDownListFor(x => x.Tbl_Yetkiler.ID, (List<SelectListItem>)ViewBag.Authority, new { @class = "form-select" })
                                     </div>
 
                                 </div>
