--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -163,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="btn btn-dark btn-sm w-100 mb-3">Dökümantasyon</a>
+            <a href="/Dokumantasyon/Index" class="btn btn-dark btn-sm w-100 mb-3">Dökümantasyon</a>
         </div>
     </aside>
     <main class="main-content position-relative border-radius-lg ">
