--- a/Endmer/Views/Login/Index.cshtml
+++ b/Endmer/Views/Login/Index.cshtml
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="~/template/logo.ico">
     <link rel="icon" type="image/png" href="~/template/logo.ico">
     <title>
-        Login - Endmer Endüstri Merkezi
+        Giriş Yap - Endmer Endüstri Merkezi
     </title>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
