--- a/Endmer/Views/AnaSayfa/Index.cshtml
+++ b/Endmer/Views/AnaSayfa/Index.cshtml
@@ -21,9 +21,11 @@
 
 
 
+
 <script>
     var anasayfa = document.getElementById('anasayfa');
     anasayfa.classList.add('active');
 
-    //$(function () { $('#myModal').modal('show') });
+    var search = document.getElementById('myInput');
+    search.classList.add('invisible');
 </script>
