--- a/Endmer/Views/Araclar/AracEkle.cshtml
+++ b/Endmer/Views/Araclar/AracEkle.cshtml
@@ -46,7 +46,7 @@
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">KM</label>
-                                        <input type="text" class="form-control" name="KM" placeholder="KM.." />
+                                        <input type="number" class="form-control" name="KM" placeholder="KM.." />
                                         @Html.ValidationMessageFor(x => x.KM, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
