--- a/Endmer/Views/Araclar/AracGuncelle.cshtml
+++ b/Endmer/Views/Araclar/AracGuncelle.cshtml
@@ -41,7 +41,7 @@
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">KM</label>
-                                        @Html.TextBoxFor(x => x.KM, new { @class = "form-control", @placeholder = "KM.." })
+                                        @Html.TextBoxFor(x => x.KM, new { @class = "form-control", @type = "number", @placeholder = "KM.." })
                                         @Html.ValidationMessageFor(x => x.KM, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
