--- a/Endmer/Views/Dokumantasyon/Index.cshtml
+++ b/Endmer/Views/Dokumantasyon/Index.cshtml
@@ -6,3 +6,24 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="container-fluid py-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-4">
+
+                <div class="card-header">
+                    <h6 class="text-center fs-4">Dökümantasyon</h6>
+                </div>
+
+                <div class="card-body px-0 pt-0 pb-2">
+                    <div class="table-responsive p-0">
+                        
+                        <p></p>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
