--- a/Endmer/Views/Urunler/UrunGuncelle.cshtml
+++ b/Endmer/Views/Urunler/UrunGuncelle.cshtml
@@ -77,13 +77,13 @@
 
                                     <div class="col-sm-12 col-md-3 col-lg-3">
                                         <label class="form-label">Adet</label>
-                                        @Html.TextBoxFor(x => x.ADET, new { @class = "form-control", @placeholder = "Adet..", @required = "required" })
+                                        @Html.TextBoxFor(x => x.ADET, new { @class = "form-control", @type = "number", @placeholder = "Adet..", @required = "required" })
                                         @Html.ValidationMessageFor(x => x.ADET, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-3 col-lg-3">
                                         <label class="form-label">Arızalı Adet</label>
-                                        @Html.TextBoxFor(x => x.ARIZALIADET, new { @class = "form-control", @placeholder = "Arızalı Adet.." })
+                                        @Html.TextBoxFor(x => x.ARIZALIADET, new { @class = "form-control", @type = "number", @placeholder = "Arızalı Adet.." })
                                         @Html.ValidationMessageFor(x => x.ARIZALIADET, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
                                 </div>
