--- a/Endmer/Views/Konumlar/Index.cshtml
+++ b/Endmer/Views/Konumlar/Index.cshtml
@@ -49,6 +49,7 @@
                                         <td>@x.KONUM</td>
                                         <td><a href="/Konumlar/KonumGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
                                         <td>@Html.ActionLink("Sil", "KonumSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstediğinize Emin Misiniz?')" })</td>
+                                        <td><a href="/Konumlar/Urunler/@x.ID" class="btn btn-primary">Ürünler</a></td>
                                     </tr>
                                 </tbody>
                             }
