--- a/Endmer/Views/Konumlar/Urunler.cshtml
+++ b/Endmer/Views/Konumlar/Urunler.cshtml
@@ -1,7 +1,5 @@
 ﻿@using Endmer.Models.Entity
-@using PagedList
-@using PagedList.Mvc
-@model PagedList.IPagedList<Tbl_Urunler>
+@model List<Tbl_Urunler>
 
 @{
     ViewBag.Title = "Urunler";
@@ -12,9 +10,11 @@
     <div class="row">
         <div class="col-12">
             <div class="card mb-4">
+
                 <div class="card-header">
-                    <h6 class="text-center fs-4">Kategoriye Ait Ürünler</h6>
+                    <h6 class="text-center fs-4">Konumdaki Ürünler</h6>
                 </div>
+
                 <div class="card-body px-0 pt-0 pb-2">
                     <div class="table-responsive p-0">
                         <table class="table table-hover align-items-center mb-0">
@@ -56,6 +56,6 @@
 
 
 <script>
-    var kategoriler = document.getElementById('kategoriler');
-    kategoriler.classList.add('active');
+    var konumlar = document.getElementById('konumlar');
+    konumlar.classList.add('active');
 </script>
